# RMAL

./: .gitmodules  Arduino Code for Demo  Arduino Demo C++ Source File  ArduinoServo  CMakeLists.txt  PointCloud.txt  README.md  Serial.cpp  Serial.h  main.cpp
6 DOF UAV/ESP_Motor_Test/: ESP_Motor_Test.ino  Main.ino
6 DOF UAV/UAV_6_DOF/: 0_Pin_Assignments.ino  1_Declarations.ino  2_Subroutines.ino  3_Setup.ino  4_Loop.ino  5_AHRS.ino  5_IMU.ino  6_Motor.ino  6_Write.ino  7_HC12.ino  7_Servo.ino  8_IR_Sensor.ino  Test.ino  UAV_6_DOF.ino
6-DOF UAV/MPU9250_IMU_Test/: MPU9250_IMU_Test.ino
6-DOF UAV/Main/: Main.ino
ArduinoServo/: ArduinoServo.ino  Class.cpp  Class.h
ArduinoServo-NEW/: ArduinoServo.ino
ArduinoServo-NEW/ArduinoServo/: ArduinoServo.ino
ArduinoTest/: ArduinoTest.ino
CatheterControl/: Handle6.FCStd  Handle8-BendingMotor.stl  Handle8Bottom.stl  linearRailMount2.stl  linearRailMount3.stl  motor.stl
Chai3D/Example1/: CMakeLists.txt
Continuum Robot/CR_Control/: CMakeLists.txt  CR_Control.7z  ctcr_configs.csv  main.cpp  tdcr_configs.csv
Continuum Robot/CR_Control/include/: common.h  controller.h  ctcr_model.h  mainloop.h  tdcr_model.h  tdcr_model_DVS.h
Continuum Robot/CR_Control/src/: controller.cpp  ctcr_model.cpp  mainloop.cpp  robot_independent.cpp  tdcr_model.cpp  tdcr_model_DVS.cpp
EndovascularSurgery-main/: main.cpp
EndovascularSurgery-main/include/: Serial.h  mainloop.h
EndovascularSurgery-main/src/: Serial.cpp  mainloop.cpp
EndovascularSurgeryRobot/: main.cpp
EndovascularSurgeryRobot/share/: PointCloud.txt
EndovascularSurgeryRobot/src/: serial.cpp  visualizer.cpp
ManMiddle/: motorcontrolprogram-onemotor.ino
Master-Follower System/: Aorta v14.stl
Master-Follower System/Arduino/Linear_Actuator_Testing/: Linear_Actuator_Testing.ino
Master-Follower System/Arduino/Main/: 0_Pin_Assignments.ino  1_Declarations.ino  2_Setup.ino  3_Loop.ino  4_Subroutines.ino  Main.ino  Motor_Angular_Control.ino  Motor_Direction_Control.ino  Motor_Incremental_Individual_Control.ino  Motor_Position_Control.ino  Motor_Velocity_Control.ino  Old_Code.ino
Master-Follower System/ArduinoServo-NEW/ArduinoServo/: ArduinoServo.ino
Master-Follower System/ArduinoServo-OLD/: Class-OLD.cpp
Master-Follower System/CatheterControl/: GearConnector.stl  Handle8-FrontStand.stl  linearRailMount.stl
Master-Follower System/EndovascularSurgeryRobot/althea/: Herk.cpp
Master-Follower System/EndovascularSurgeryRobot/share/: PointCloud.txt
Master-Follower System/EndovascularSurgeryRobot/src/: mainloop.cpp
Master-Follower System/MAIN/include/: mainloop.h  serial.h
Master-Follower System/Old Files/: PointCloud.txt
Master-Follower System/Old Files/ArduinoServo-OLD/: ArduinoServo-OLD.ino
Master-Follower System/Old Files/Code from Mankarn/: motorcontrolprogram-onemotor.ino
Master-Follower System/Old Files/MAIN/: CMakeLists.txt
Master-Follower System/Old Files/Unknown_Stls/: Handle.FCStd  Handle8Stand.stl  LinearRail2.FCStd  cupler.stl  cupler2.stl  dmount.stl  motorBendWall.stl  motorConnector.stl  nonmotorBendWall.stl  shaft.stl
Master-Follower System/Old Files/VTKPractice/: AortaConnectedv3.stl
Master-Follower System/Old Files/stlToPoint/: Aorta v13.stl  Human_Cardiovascular_System_Full_Body v4.stl
Master-Follower System/Serial/: Serial.h
Master-Follower System/VTKPractice/Tutorial_Step2/: CMakeLists.txt
Master-Follower System/VTKPractice/environment/: main.cpp
Master-Follower System/html/: Serial_8h_source.html  annotated.html  classSerial-members.html  classes.html  files.html  functions.html  index.html
Master-Follower System/html/search/: pages_0.js
Master-Follower System/latex/: annotated.tex  index.tex  refman.tex
Master-Follower System/old/: CMakeLists.txt  main.cpp
Master-Follower System/old/althea/: Herk.hpp  Herk_Controller.hpp
Master-Follower System/old/src/: mainloop.cpp
RMAL/: Serial.cpp  Serial.h  main.cpp
RMAL/ArduinoServo/: ArduinoServo.ino
Serial/: CMakeLists.txt  Serial.cpp  main.cpp
VTKPractice/: AortaAssemblyv3.stl  PointCloud.txt  untitled.m
VTKPractice/Tutorial_Step6/: CMakeLists.txt
VTKPractice/environment/: CMakeLists.txt  main.cpp
html/: classSerial.html  functions_func.html
html/search/: all_1.js  functions_0.js  functions_1.js  searchdata.js
latex/: Serial_8h_source.tex  classSerial.tex  files.tex
old/include/: visualizer.h
old/src/: visualizer.cpp
six_dof_uav/UAV_6_DOF/: 0_Pin_Assignments.ino  1_Declarations.ino  3_Setup.ino  4_Loop.ino  5_IMU.ino
sketch_jan30a/: sketch_jan30a.ino
stlToPoint/: Aorta v10.stl  Aorta v11.stl  Aorta v5.stl  Aorta v6.stl  AortaConnectedv4.stl  Point_Cloud_For_Aorta.txt  stlToPoint.m
uam/log/: latest_build
uam/ros_uam/install/: local_setup.sh  (+1 more)
(+440 files in other folders)
